# extreme-nest

./: .gitignore  package-lock.json  package.json
client/sources/: package-lock.json  package.json  webpack.config.js
client/sources/resources/data/: configuration.json  information.json
client/sources/resources/pages/: index.html
client/sources/resources/styles/: style.css
client/sources/scripts/: canvasPainter.js  functionalUtils.js  index.js  nestingRequestParser.js  nestingResponseParser.js  storage.js
client/sources/scripts/drawing/: canvasPainter.js
client/sources/templates/: exportBlockTemplate.vue  headerTemplate.vue  importBlockTemplate.vue  informationBlockTemplate.vue  visualizationBlockTemplate.vue
common/: canvasPainter.js  nestingResponseParser.js
database-server/: package-lock.json  package.json
database-server/resources/: configuration.json
database-server/sources/: databaseConnector.js  responseSender.js  router.js  server.js
database-server/sources/dao/: goldRequests.js  goldResponses.js  nesting.js  nestingDAO.js  requestsDAO.js  responsesDAO.js  serverRequests.js  testing.js  testingsDAO.js  testsDAO.js
database-server/sources/handlers/: creationHandler.js  deletingHandler.js  receivingHandler.js
database-server/sources/services/: requestsService.js  responsesService.js  testing.js  testingChecker.js  testsService.js
database-server/sources/services/testing/: testingChecker.js  testingService.js
database-server/tests/: router.test.js
resources/: configuration.json  limits.json
scripts/: router.js  server.js
scripts/handlers/: auethentification.js  authorizationHandler.js  error.js
server/: CMakeLists.txt  binding.gyp  package-lock.json  package.json  readme.md
server/dependencies/deepnest/: background.js  calculateFitness.js  nestingOptimization.js  svgnest.js
server/dependencies/deepnest/util/: geometryutil.js  simplify.js
server/resources/: configuration.json  httpResponses.json  job_schema.json
server/run_area/failed/: 1.json  2.json
server/run_area/imported_nesting/: albano-request.json  albano-response.json  blaz-request.json  blaz-response.json  dagli-request.json  dagli-response.json  dighe-1-request.json  dighe-1-response.json  dighe-2-request.json  dighe-2-response.json  fu-request.json  fu-response.json  han-request.json  jackobs-1-request.json  jackobs-1-response.json  jackobs-2-request.json  jackobs-2-response.json  mao-request.json  mao-response.json  marques-request.json  marques-response.json  poly-1a-request.json  poly-2b-request.json  poly-3b-request.json  poly-4b-request.json  poly-5b-request.json  shapes-0-request.json  shapes-0-response.json  shapes-1-request.json  shapes-1-response.json  shirts-request.json  shirts-response.json  swim-request.json  swim-response.json  trousers-request.json  trousers-response.json
server/sources/: httpStatusCodes.js  router.js  server.js
server/sources/handlers/: common.js  errorHandler.js  fetchingHandler.js  fullResultHandler.js  nestingHandler.js  nestingRequest.js  partialResultHandler.js
server/sources/nesting/: CMakeLists.txt  calculateFitness.js  code_style_convention.htm  common.h  config.h  extreme_error.h  extreme_json.h  log.h  main.cpp  nesting.js  nestingOptimization.js  nestingRequest.js  nestingRequestParser.js  nesting_optimization.h  nesting_request.h  nesting_task.cpp  nesting_task.h  simplify.h
server/sources/nesting/nfp_optimization/: genetic_algorithm.h  nest.cpp  nfp_optimization.cpp  nfp_optimization.h  nofit_polygon.h
server/sources/nesting/pr_optimization/: cell_space.h  genetic_algorithm.h  nest.cpp  nest.h  pr_optimization.cpp
server/sources/nesting/run_area/: request1.json
server/sources/utils/: filesystem.js
sources/: httpStatusCodes.js  server.js
sources/handlers/: authorizationHandler.js  errorHandler.js  fetchingHandler.js  nestingHandler.js
sources/nesting/: nesting.js  nestingRequestParser.js
sources/utils/: filesystem.js
test-client/: package-lock.json  package.json  readme.md  webpack.config.js
test-client/sources/resources/data/: network.json
test-client/sources/resources/pages/: index.html
test-client/sources/resources/styles/: style.css
test-client/sources/scripts/: canvasPainter.js  functionalUtils.js  goldNestingGenerator.js  index.js  nestingGenerator.js  nestingImporter.js  nestingRequestParser.js  nestingResponseParser.js  network.js  randomNestingGenerator.js  router.js  storage.js  store.js  utils.js
test-client/sources/scripts/bus/: addingDeletingTestBus.js
test-client/sources/templates/: goldVisualizationBlock.vue  headerBlockTemplate.vue  headerForm.vue  serverVisualizationBlock.vue
test-client/sources/templates/components/: deleting-tests-block.vue  gold-visualization-block.vue  information-block.vue  saving-test-block.vue  server-visualization-block.vue  visualization-block.vue
test-client/sources/templates/exportPage/: exportForm.vue  exportPage.vue
test-client/sources/templates/forms/: header-form.vue  import-form.vue  navigation-form.vue  parameters-form.vue  request-response-info-form.vue
test-client/sources/templates/generationPage/: deletingTestsBlock.vue  exportBlockTemplate.vue  generationPage.vue  generationPageTemplate.vue  goldVisualizationCanvasTemplate.vue  parametersBlockTemplate.vue  parametersForm.vue  randomVisualizationCanvasTemplate.vue  savingTestBlock.vue  visualizationBlockTemplate.vue
test-client/sources/templates/importPage/: importPage.vue
test-client/sources/templates/pages/: generation-page.vue  import-page.vue  testing-page.vue
test-client/sources/templates/testingPage/: informationBlockTemplate.vue  navigationBlockTemplate.vue  navigationForm.vue  testingPage.vue  testingPageTemplate.vue  testingTemplate.vue  visualizationBlockTemplate.vue
test-client/sources/templates/testsPage/: navigationTestsForm.vue  testsPage.vue
tests/: GeometryUtils.py  RunTests.py
