# Copyright (c) 2019 by
# GkmSoft (individual entrepreneur Petr Petrovich Petrov)
# This file is part of Extreme Nest project.
# This software is intellectual property of GkmSoft.

project(extreme_nest)

cmake_minimum_required(VERSION 3.0)

find_package(Boost 1.60 REQUIRED COMPONENTS date_time)

set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_CURRENT_LIST_DIR}/bin)
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_CURRENT_LIST_DIR}/bin)
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_CURRENT_LIST_DIR}/bin)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_RELEASE ${CMAKE_RUNTIME_OUTPUT_DIRECTORY})
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY_RELEASE ${CMAKE_ARCHIVE_OUTPUT_DIRECTORY})
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY_RELEASE ${CMAKE_LIBRARY_OUTPUT_DIRECTORY})
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_DEBUG ${CMAKE_RUNTIME_OUTPUT_DIRECTORY})
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY_DEBUG ${CMAKE_ARCHIVE_OUTPUT_DIRECTORY})
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY_DEBUG ${CMAKE_LIBRARY_OUTPUT_DIRECTORY})
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_RELWITHDEBINFO ${CMAKE_RUNTIME_OUTPUT_DIRECTORY})
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY_RELWITHDEBINFO ${CMAKE_ARCHIVE_OUTPUT_DIRECTORY})
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY_RELWITHDEBINFO ${CMAKE_LIBRARY_OUTPUT_DIRECTORY})
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_MINSIZEREL ${CMAKE_RUNTIME_OUTPUT_DIRECTORY})
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY_MINSIZEREL ${CMAKE_ARCHIVE_OUTPUT_DIRECTORY})
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY_MINSIZEREL ${CMAKE_LIBRARY_OUTPUT_DIRECTORY})
set(RUN_AREA_DIR ${CMAKE_CURRENT_LIST_DIR}/run_area)

add_definitions(-DBOOST_FILESYSTEM_NO_DEPRECATED)
include_directories(${Boost_INCLUDE_DIRS})
link_directories(${Boost_LIBRARY_DIRS})

if(WIN32)
  add_definitions(-D_WIN32_WINNT=_WIN32_WINNT_WIN7)
  add_definitions(-D_WINSOCK_DEPRECATED_NO_WARNINGS)
endif()

include_directories(${PROJECT_SOURCE_DIR})
set(HEADERS
  ${PROJECT_SOURCE_DIR}/config.h
  ${PROJECT_SOURCE_DIR}/nesting_request.h
  ${PROJECT_SOURCE_DIR}/nesting_task.h
)

set(SOURCES
  ${PROJECT_SOURCE_DIR}/nesting_task.cpp
  ${PROJECT_SOURCE_DIR}/main.cpp
)

include_directories(${PROJECT_SOURCE_DIR}/nfp_optimization)
set(NFP_OPTIMIZATION
  ${PROJECT_SOURCE_DIR}/nfp_optimization/genetic_algorithm.h
  ${PROJECT_SOURCE_DIR}/nfp_optimization/nfp_optimization.h
  ${PROJECT_SOURCE_DIR}/nfp_optimization/nofit_polygon.h
  ${PROJECT_SOURCE_DIR}/nfp_optimization/genetic_algorithm.cpp
  ${PROJECT_SOURCE_DIR}/nfp_optimization/nfp_optimization.cpp
  ${PROJECT_SOURCE_DIR}/nfp_optimization/nofit_polygon.cpp
)

include_directories(${PROJECT_SOURCE_DIR}/pr_optimization)
set(PR_OPTIMIZATION
  ${PROJECT_SOURCE_DIR}/pr_optimization/pr_optimization.h
  ${PROJECT_SOURCE_DIR}/pr_optimization/pr_optimization.cpp
)

set(CMAKE_CXX_STANDARD 14)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

add_executable(extreme_nest ${HEADERS} ${SOURCES} ${NFP_OPTIMIZATION} ${PR_OPTIMIZATION})
source_group(nfp FILES ${NFP_OPTIMIZATION})
source_group(pr FILES ${PR_OPTIMIZATION})

if(WIN32)
  set_target_properties(extreme_nest PROPERTIES VS_DEBUGGER_WORKING_DIRECTORY ${RUN_AREA_DIR})
endif()
